# mtogo

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-stack-test.yml  docker-stack.yml
.devcontainer/: devcontainer.json  keys-for-dev.sh
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: sub_issue.yml
.github/workflows/: ci-on-push.yml  ci.yml  labels-on-push.yml  nightly.yml  performance-tests.yml  ui-tests.yml  weekly.yml
perf-test/: customers.csv  menu_items.csv  order_creation_and_supplier_poll_perf-test.jmx  suppliers.csv
services/auth-service/: dependency-reduced-pom.xml  pom.xml
services/courier-service/: Dockerfile  dependency-reduced-pom.xml  pom.xml
services/courier-service/frontend/: vite.config.js
services/customer-service/: Dockerfile  dependency-reduced-pom.xml  pom.xml
services/example-service/: Dockerfile  pom.xml  run_tests.sh
services/management-service/: pom.xml
services/mongodb-driver/: Dockerfile  pom.xml
services/monitor-service/: gf-dashboard.json  prometheus.yml  update_monitor-service_config.sh
services/redis-driver/: dependency-reduced-pom.xml  pom.xml
services/sql-driver/: Dockerfile  dependency-reduced-pom.xml  pom.xml
services/supplier-service/: Dockerfile  dependency-reduced-pom.xml  pom.xml  start.sh
services/supplier-service/legacy-system/: Cargo.toml
services/supplier-service/legacy-system/assets/: index.html  legacy.js
services/supplier-service/legacy-system/src/: main.rs
services/support-service/: pom.xml
sql/: create_pg.sql  mock.sql
ua-tests/: dependency-reduced-pom.xml  pom.xml
(+499 files in other folders)
