[package]
name = "legacy-system"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
quick-xml = {version = "0.38.4", features = ["serialize"]}
serde = {version = "1.0.228", features = ["derive"]}
tokio = {version = "1.44.2", features = ["full"]}
tower-http = {version = "0.6.2", features = ["fs"]}
